4 August 2005 Sylvain Pion
- Move all config macros post-processing from basic.h to config.h.

4 June 2005 Menelaos Karavelas
- Add CGAL_CFG_NESTED_CLASS_FRIEND_DECLARATION_BUG.C for Intel compiler 8.x,
  MSVC 7.1 and pgCC.

6 March 2005 Sylvain Pion
- Add CGAL_CFG_NO_LONG_DOUBLE_IO.C and CGAL_LONG_DOUBLE_IO for pgCC.

=========================== CGAL 3.1 =============================

28 September 2004 Andreas Fabri
- Add CGAL_CFG_TYPENAME_BEFORE_DEFAULT_ARGUMENT_BUG.C

11 September 2004 Sylvain Pion
- Add CGAL_CFG_NO_STL.C (extracted from install_cgal).

1 September 2004 Sylvain Pion
- Add CGAL_CFG_HAS_TWO_STAGE_NAME_LOOKUP.C .

26 August 2004 Sylvain Pion
- Add CGAL_CFG_NO_CORE.C CGAL_CFG_NO_GMP.C CGAL_CFG_NO_GMPXX.C
  CGAL_CFG_NO_LEDA.C CGAL_CFG_NO_QT.C .

19 August 2004 Sylvain Pion
- CGAL_CFG_OUTOFLINE_TEMPLATE_MEMBER_DEFINITION_BUG : fix warning.

9 August 2004 Andreas Fabri
- Changed CGAL_CFG_USING_BASE_MEMBER_BUG_3

24 June 2004 Sylvain Pion
- Add CGAL_CFG_USING_BASE_MEMBER_BUG_3 : attempt to detect MipsPRO bug.

20 June 2004 Sylvain Pion
- CGAL_CFG_NO_BIG_ENDIAN.C : fix compilation with g++ 3.5.

22 May 2004 Sylvain Pion
- Add CGAL_CFG_USING_BASE_MEMBER_BUG_2.C for SunPRO 5.3.

20 May 2004 Sylvain Pion
- Add CGAL_CFG_CONVERSION_OPERATOR_BUG.C to detect the bug in g++ 3.3.0.

9 May 2004 Sylvain Pion
- Add CGAL_CFG_NO_PRAGMA_FENV_ACCESS.C

6 May 2004 Sylvain Pion
- Slightly modify CGAL_CFG_IEEE_754_BUG.C so that ICC passes
  when the -mp option is selected.

6 May 2004 Laurent Rineau
- Added CGAL_CFG_OUTOFLINE_TEMPLATE_MEMBER_DEFINITION_BUG_2.C

27 Apr 2004 Sylvain Pion
- Remove trace of CGAL_MASK_FINITE_VALID in Borland_fixes.h.

18 Apr 2004 Sylvain Pion
- Added CGAL_CFG_IEEE_754_BUG.C for PGCC/VC++/Borland.

18 Apr 2004 Sylvain Pion
- Added CGAL_CFG_DENORMALS_COMPILE_BUG.C for PGCC.

8 Apr 2004 Sylvain Pion
- Kill "unused variable" warning with PGCC.

26 Feb 2004 Radu Ursu
- removed CGAL_VERSION and CGAL_VERSION_NR from config.h